--- a/languages/ci/locale/fi_FI/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/fi_FI/LC_MESSAGES/auberge_lang_ho.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-19 16:10+0300\n"
-"PO-Revision-Date: 2013-04-19 22:14+0200\n"
+"PO-Revision-Date: 2013-04-23 21:53+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -435,13 +435,13 @@ msgstr "Arvo"
 #: ../code/application/views/helpfile/pofields.php:657
 #, php-format
 msgid "Facilities"
-msgstr "Palvelut"
+msgstr "Rakennukset"
 
 #: ../code/application/views/compare_property.php:235
 #: ../code/application/views/helpfile/pofields.php:658
 #, php-format
 msgid "Show More"
-msgstr ""
+msgstr "Näytä Enemmän"
 
 #: ../code/application/views/compare_property.php:350
 #: ../code/application/views/compare_property.php:353
@@ -719,9 +719,9 @@ msgstr "Kohdeoppaat"
 
 #: ../code/application/views/includes/recent_property_view_cookie.php:9
 #: ../code/application/views/helpfile/pofields.php:687
-#, fuzzy, php-format
+#, php-format
 msgid "Recently Viewed"
-msgstr "Viimeksi katsotut hostellit"
+msgstr "Hiljattain katsottu "
 
 #: ../code/application/views/includes/top_filter.php:24
 #: ../code/application/views/helpfile/pofields.php:282
@@ -1199,39 +1199,39 @@ msgstr "Kartat ovat tärkeitä ja erittäin käytännöllisiä"
 
 #: ../code/application/views/includes/template-share-email-popup.php:12
 #: ../code/application/views/helpfile/pofields.php:668
-#, fuzzy, php-format
+#, php-format
 msgid "Your message has been sent to %s"
-msgstr "Viesti on lähetetty sähköpostiisi"
+msgstr "Viesti on lähetetty osoitteeseen %s"
 
 #: ../code/application/views/includes/template-share-email-popup.php:17
 #: ../code/application/views/helpfile/pofields.php:669
 #, php-format
 msgid "From:"
-msgstr ""
+msgstr "Keneltä:"
 
 #: ../code/application/views/includes/template-share-email-popup.php:21
 #: ../code/application/views/helpfile/pofields.php:670
-#, fuzzy, php-format
+#, php-format
 msgid "To:"
-msgstr "Yhteensä:"
+msgstr "Kenelle:"
 
 #: ../code/application/views/includes/template-share-email-popup.php:25
 #: ../code/application/views/helpfile/pofields.php:671
 #, php-format
 msgid "Subject:"
-msgstr ""
+msgstr "Aihe:"
 
 #: ../code/application/views/includes/template-share-email-popup.php:29
 #: ../code/application/views/helpfile/pofields.php:672
-#, fuzzy, php-format
+#, php-format
 msgid "Message:"
-msgstr "Viesti"
+msgstr "Viesti:"
 
 #: ../code/application/views/includes/template-share-email-popup.php:37
 #: ../code/application/views/helpfile/pofields.php:673
 #, php-format
 msgid "Send another message"
-msgstr ""
+msgstr "Lähetä uusi viesti"
 
 #: ../code/application/views/includes/template-share-email-popup.php:38
 #: ../code/application/views/includes/template-share-email-popup.php:86
@@ -1249,7 +1249,7 @@ msgstr "Sulje"
 #, php-format
 msgid ""
 "Mail this page to someone you know, or send it to yourself as a reminder."
-msgstr ""
+msgstr "Lähetä tämä sivu tuttavalle tai itsellesi muistutukseksi."
 
 #: ../code/application/views/includes/template-share-email-popup.php:44
 msgid "Mail this PDF quote to someone you know, or send it to yourself."
@@ -1259,13 +1259,13 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:676
 #, php-format
 msgid "To (email)"
-msgstr ""
+msgstr "Kenelle (sähköposti)"
 
 #: ../code/application/views/includes/template-share-email-popup.php:52
 #: ../code/application/views/helpfile/pofields.php:677
 #, php-format
 msgid "Subject"
-msgstr ""
+msgstr "Aihe"
 
 #: ../code/application/views/includes/template-share-email-popup.php:57
 #: ../code/application/views/helpfile/pofields.php:85
@@ -1284,7 +1284,7 @@ msgstr "Etunimi"
 #: ../code/application/views/helpfile/pofields.php:680
 #, php-format
 msgid "From (email)"
-msgstr ""
+msgstr "Keneltä ( sähköposti)"
 
 #: ../code/application/views/includes/template-share-email-popup.php:73
 msgid ""
@@ -1305,13 +1305,13 @@ msgstr "Lähetä"
 
 #: ../code/application/views/includes/template-share-email-popup.php:85
 msgid "Please wait ..."
-msgstr ""
+msgstr "Ole hyvä ja odota..."
 
 #: ../code/application/views/includes/template-share-email-popup.php:90
 #: ../code/application/views/helpfile/pofields.php:684
 #, php-format
 msgid "Share PDF"
-msgstr ""
+msgstr "Jakaa PDF"
 
 #: ../code/application/views/includes/header.php:13
 #: ../code/application/views/mobile/includes/header.php:13
@@ -3738,7 +3738,7 @@ msgstr "Valitse tästä"
 
 #: ../code/application/views/city_view.php:351
 msgid "From"
-msgstr ""
+msgstr "Keneltä"
 
 #: ../code/application/views/city_view.php:352
 msgid "Only 5 properties can be compared. Please remove a property from list."
@@ -3869,7 +3869,7 @@ msgstr "Etsi Saatavuus ..."
 #: ../code/application/views/helpfile/pofields.php:694
 #, php-format
 msgid "Want to receive or send a PDF copy of this quote?"
-msgstr ""
+msgstr "Haluatko saada tai lähettää PDF kopion?"
 
 #: ../code/application/views/hw/hostel_view.php:671
 #: ../code/application/views/hb/hostel_view.php:895
@@ -4393,7 +4393,7 @@ msgstr "(Voimassa %s)"
 #: ../code/application/views/helpfile/pofields.php:795
 #, php-format
 msgid "Total:"
-msgstr "Yhteensä:"
+msgstr "Kokosumma:"
 
 #: ../code/application/views/email/new_transaction.php:525
 #, php-format
@@ -4540,14 +4540,14 @@ msgstr "Käyttäjätunnuksesi (sähköpostiosoite): %s"
 #: ../code/application/views/email/share_page-html.php:35
 #, php-format
 msgid "%s has sent you a message:"
-msgstr ""
+msgstr "%s on lähettänyt sinulle viestin"
 
 #: ../code/application/views/email/share_page-txt.php:5
 #: ../code/application/views/email/share_page-html.php:39
 #: ../code/application/views/helpfile/pofields.php:696
 #, php-format
 msgid "Here is the link to see the prices, description, maps and much more:"
-msgstr ""
+msgstr "Tässä on linkki nähdäkseen hinnat, kuvaukset, kartat ja paljon muuta:"
 
 #: ../code/application/views/email/share_page-txt.php:23
 #: ../code/application/views/email/share_page-html.php:59
@@ -7381,68 +7381,68 @@ msgstr "Vertaa (%d viidestä)"
 #: ../code/application/views/helpfile/pofields.php:659
 #, php-format
 msgid "Show Less"
-msgstr ""
+msgstr "Näytä Vähemmän"
 
 #: ../code/application/views/helpfile/pofields.php:660
 #: ../code/application/controllers/cmain.php:1669
 #, php-format
 msgid "Not enough parameters"
-msgstr ""
+msgstr "Ei tarpeeksi parametrejä"
 
 #: ../code/application/views/helpfile/pofields.php:661
 #: ../code/application/views/helpfile/pofields.php:769
 #: ../code/application/controllers/cmain.php:1673
-#, fuzzy, php-format
+#, php-format
 msgid "Fill in the email"
-msgstr "Tulosta kartta"
+msgstr "Täytä sähköpostiosoite"
 
 #: ../code/application/views/helpfile/pofields.php:662
 #: ../code/application/controllers/cmain.php:1677
 #, php-format
 msgid "Invalid email recipient"
-msgstr ""
+msgstr "Virheellinen sähköpostiosoite"
 
 #: ../code/application/views/helpfile/pofields.php:663
 #: ../code/application/views/helpfile/pofields.php:770
 #: ../code/application/controllers/cmain.php:1681
 #, php-format
 msgid "Fill in the subject"
-msgstr ""
+msgstr "Kirjoita  aihe"
 
 #: ../code/application/views/helpfile/pofields.php:664
 #: ../code/application/views/helpfile/pofields.php:771
 #: ../code/application/controllers/cmain.php:1684
 #, php-format
 msgid "Fill in the message"
-msgstr ""
+msgstr "Kirjoita viesti"
 
 #: ../code/application/views/helpfile/pofields.php:665
 #: ../code/application/controllers/cmain.php:1687
 #, php-format
 msgid "Fill in the \"From\" name"
-msgstr ""
+msgstr "Kirjoita ``Keneltä`` nimi"
 
 #: ../code/application/views/helpfile/pofields.php:666
 #: ../code/application/controllers/cmain.php:1690
 #, php-format
 msgid "Fill in the \"From\" email"
-msgstr ""
+msgstr "Kirjoita ``Keneltä``sähköposti"
 
 #: ../code/application/views/helpfile/pofields.php:667
 #: ../code/application/controllers/cmain.php:1694
-#, fuzzy, php-format
+#, php-format
 msgid "Invalid \"From\" email"
-msgstr "Annetun tiedon muoto ei kelpaa"
+msgstr "Virheellinen ``Keneltä`` sähköposti"
 
 #: ../code/application/views/helpfile/pofields.php:681
 #, php-format
 msgid "Yes, I want to subscribe to the newsletter."
-msgstr ""
+msgstr "Kyllä haluan tilata uutiskirjeen."
 
 #: ../code/application/views/helpfile/pofields.php:685
 #, php-format
 msgid "Want to send a PDF copy of this page or quote by email?"
-msgstr ""
+msgstr "Haluatko lähettää sivusta PDF kopion tai siteerauksen sähköpostille?"
 
 #: ../code/application/views/helpfile/pofields.php:686
 #, fuzzy, php-format
@@ -7456,16 +7456,18 @@ msgid ""
 "continuing to browse our site you are agreeing to our Cookies Policy and use "
 "of cookies technology. Find out more"
 msgstr ""
+"Käytämme evästeitä että verkkosivusto toimisi hyvin.Selaten sivustollamme "
+"hyväksyt miedän Evästekäytäntön ja teknologian. Lisätietoja"
 
 #: ../code/application/views/helpfile/pofields.php:689
-#, fuzzy, php-format
+#, php-format
 msgid "New Search"
-msgstr "Hae nyt"
+msgstr "Uusi Etsintö"
 
 #: ../code/application/views/helpfile/pofields.php:690
-#, fuzzy, php-format
+#, php-format
 msgid "Search"
-msgstr "Hae nyt"
+msgstr "Etsi"
 
 #: ../code/application/views/helpfile/pofields.php:691
 #: ../code/application/views/helpfile/pofields.php:723
@@ -7478,18 +7480,18 @@ msgstr "Valitse"
 #: ../code/application/views/helpfile/pofields.php:692
 #, php-format
 msgid "last %d"
-msgstr ""
+msgstr "viimeiset %d"
 
 #: ../code/application/views/helpfile/pofields.php:693
 #: ../code/application/views/mustache/property_list.php:107
 #, php-format
 msgid "Quick View"
-msgstr ""
+msgstr "Nopeasti"
 
 #: ../code/application/views/helpfile/pofields.php:695
 #, php-format
 msgid "%s has sent you a message: "
-msgstr ""
+msgstr "%s on lähettänyt sinulle viestin:"
 
 #: ../code/application/views/helpfile/pofields.php:697
 #, php-format
@@ -7837,22 +7839,22 @@ msgstr "Saatavilla varauksen tehtyä"
 #: ../code/application/views/helpfile/pofields.php:763
 #, php-format
 msgid "%d Bed Private Shared Bathroom"
-msgstr ""
+msgstr "Yksityis makuhuone %d ihmiselle yhteisen kylpyhuoneen kanssa"
 
 #: ../code/application/views/helpfile/pofields.php:764
-#, fuzzy, php-format
+#, php-format
 msgid "Partially Available"
-msgstr "Pysäköinti"
+msgstr "Osallisesti Saatavalla"
 
 #: ../code/application/views/helpfile/pofields.php:765
 #, php-format
 msgid "Standard Single Private Shared Bathroom"
-msgstr ""
+msgstr "Standard yksityis makuhuone 1 ihmiselle yhteisen kylpyhuoneen kanssa"
 
 #: ../code/application/views/helpfile/pofields.php:766
 #, php-format
 msgid "Show fully available only"
-msgstr ""
+msgstr "Näytä vain täysin saatavilla olevia huoneita"
 
 #: ../code/application/views/helpfile/pofields.php:767
 #, php-format
@@ -7861,16 +7863,19 @@ msgid ""
 "dates. You can select this filter to only see rooms with full availability "
 "for your stay."
 msgstr ""
+"Näytämme osallisesti ja täysin saatavilla olevia huoneita valittuna "
+"päivämäärinä. Voit valkata myös tämän filtterin joka näyttää vain täysin "
+"vapaita huoneita."
 
 #: ../code/application/views/helpfile/pofields.php:768
-#, fuzzy, php-format
+#, php-format
 msgid "Email is not valid"
-msgstr "Virheellinen Maa"
+msgstr "Sähköpostiosoite ei ole oikea."
 
 #: ../code/application/views/helpfile/pofields.php:772
-#, fuzzy, php-format
+#, php-format
 msgid "Fill in the from name"
-msgstr "Tulosta kartta"
+msgstr "Kirjoita lähettäjän nimi"
 
 #: ../code/application/views/helpfile/pofields.php:773
 #, php-format
@@ -7890,83 +7895,82 @@ msgstr "Poista listalta tämä etsintäsana 1 viikoksi"
 #: ../code/application/views/helpfile/pofields.php:776
 #, php-format
 msgid "Standard Single Private Ensuite"
-msgstr ""
+msgstr "Standard yksityishuone kylpyhuoneen kanssa"
 
 #: ../code/application/views/helpfile/pofields.php:777
 #, php-format
 msgid "Standard Twin Private Ensuite"
-msgstr ""
+msgstr "Standard kahden hengen huone kylpyhuoneen kanssa"
 
 #: ../code/application/views/helpfile/pofields.php:778
 #, php-format
 msgid "Deluxe Double Bed Private Ensuite"
-msgstr ""
+msgstr "Luxus kahden hengen huone kylpyhuoneen kanssa"
 
 #: ../code/application/views/helpfile/pofields.php:779
 #, php-format
 msgid "1 Bed Private Ensuite"
-msgstr ""
+msgstr "1 Yksityishuone yhdelle hengelle kyslpyhuoneen kanssa"
 
 #: ../code/application/views/helpfile/pofields.php:780
 #, php-format
 msgid "%d Bed Private Ensuite"
-msgstr ""
+msgstr "%d hengen yksityishuone kylpyhuoneen kanssa"
 
 #: ../code/application/views/helpfile/pofields.php:781
 #, php-format
 msgid "Deluxe 1 Bed Family Room Ensuite"
-msgstr ""
+msgstr "Luxus 1 sängyn perhe huone kylpyhuoneen kanssa"
 
 #: ../code/application/views/helpfile/pofields.php:782
 #, php-format
 msgid "Deluxe %d Bed Family Room Ensuite"
-msgstr ""
+msgstr "Luxus %d hengen perhe huone kylpyhuoneen kanssa"
 
 #: ../code/application/views/helpfile/pofields.php:783
-#, fuzzy, php-format
+#, php-format
 msgid "Filter by districts"
-msgstr "Haun rajoitus:"
+msgstr "Etsi alueen perusteella"
 
 #: ../code/application/views/helpfile/pofields.php:784
 #, php-format
 msgid "Filter by landmarks (-2kms)"
-msgstr ""
+msgstr "Etsi maamerkin perusteella (-2 km)"
 
 #: ../code/application/views/helpfile/pofields.php:785
-#, fuzzy, php-format
+#, php-format
 msgid "Lowest price per night per person in a dorm"
-msgstr "Keskimäärin per yö per ihminen"
+msgstr "Matalin hinta per yö per ihminen ylioppilasasuntolassa"
 
 #: ../code/application/views/helpfile/pofields.php:786
-#, fuzzy, php-format
+#, php-format
 msgid "Lowest price per night per person in a private room"
-msgstr ""
-"Matalain hinta per ihminen per yö yksiyishuoneessa tässä majoituksessa:"
+msgstr "Matalin hinta per yö per ihminen yksityishuoneessa"
 
 #: ../code/application/views/helpfile/pofields.php:787
 #, php-format
 msgid "Deposit:"
-msgstr ""
+msgstr "Käsiraha:"
 
 #: ../code/application/views/helpfile/pofields.php:788
 #, php-format
 msgid "Deposit to be paid now:"
-msgstr ""
+msgstr "Käsiraha joka pitää maksaa nyt:"
 
 #: ../code/application/views/helpfile/pofields.php:789
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit already paid:"
-msgstr "Maksu jo suoritettu"
+msgstr "Käsiraha jo maksettu:"
 
 #: ../code/application/views/helpfile/pofields.php:790
 #, php-format
 msgid "Amount already charged in %s:"
-msgstr ""
+msgstr "Määrä joka veloitettu %s valuutalla:"
 
 #: ../code/application/views/helpfile/pofields.php:791
 #, php-format
 msgid "Currency for the deposit:"
-msgstr ""
+msgstr "Käsirahan valuutta:"
 
 #: ../code/application/views/helpfile/pofields.php:792
 #, php-format
@@ -7974,42 +7978,43 @@ msgid ""
 "You only pay the deposit to confirm and secure your reservation now. The "
 "remaining amount is payable upon arrival."
 msgstr ""
+"Maksat käsirahan vahvistaakseen varauksen.Toinen puoli maksusta maksat "
+"paikanpäällä."
 
 #: ../code/application/views/helpfile/pofields.php:793
 #, php-format
 msgid "Amount to be paid on arrival:"
-msgstr ""
+msgstr "Määrä mitä maksat paikanpäällä:"
 
 #: ../code/application/views/helpfile/pofields.php:794
 #, php-format
 msgid "Amount to be paid when you arrive at the property"
-msgstr ""
+msgstr "Määrä mitä maksat kun saaput majoituspaikalle"
 
 #: ../code/application/views/helpfile/pofields.php:796
-#, fuzzy, php-format
+#, php-format
 msgid "Membership card (not required):"
-msgstr "Vaatii jäsenkortin"
+msgstr "Jäsenyys kortti( ei tarvitse):"
 
 #: ../code/application/views/helpfile/pofields.php:797
-#, fuzzy, php-format
+#, php-format
 msgid "Membership card:"
-msgstr "Vaatii jäsenkortin"
+msgstr "Jsenyys kortti:"
 
 #: ../code/application/views/helpfile/pofields.php:798
 #, php-format
 msgid "The deposit is non refundable and non transferable."
-msgstr ""
+msgstr "Käsirahaa ei ole mahdollista palauttaa tai siirtää."
 
 #: ../code/application/views/helpfile/pofields.php:799
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit to confirm and secure your reservation now. The "
 "remaining amount is payable upon arrival. You will find the property"
 msgstr ""
-"Maksat vain takuumaksun (10%% kokonaishinnasta) vahvistaaksesi varauksesi "
-"toistaiseksi. Loput laskusta (90%%) on maksettava saapumisen yhteydessä. "
-"Majoituspaikan tiedot (sähköpostiosoite, osoite, puhelinnumero …) näkyvät "
-"vahvistussähköpostissa kun olet tehnyt varauksesi."
+"Maksat käsirahan vahvistakseen varauksen. Toinen puoli maksusta maksat "
+"paikanpäällä. Löydät majoituksen yhteistiedot (sähköposti,osoite,"
+"puhelinnumero…) vahvistus sähköpostilla, varauksen tehtyä."
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
