--- a/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/pt_BR/LC_MESSAGES/auberge_lang_ho.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-19 16:10+0300\n"
-"PO-Revision-Date: 2013-04-19 22:09+0200\n"
+"PO-Revision-Date: 2013-04-23 21:01+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "Language: fr\n"
@@ -8004,14 +8004,14 @@ msgstr ""
 "total disponibilidade para a sua estadia."
 
 #: ../code/application/views/helpfile/pofields.php:768
-#, fuzzy, php-format
+#, php-format
 msgid "Email is not valid"
-msgstr "País inválido"
+msgstr "E-mail inválido"
 
 #: ../code/application/views/helpfile/pofields.php:772
-#, fuzzy, php-format
+#, php-format
 msgid "Fill in the from name"
-msgstr "Preencha o nome no campo \"De\""
+msgstr "Preencher no destinatário"
 
 #: ../code/application/views/helpfile/pofields.php:773
 #, php-format
@@ -8029,86 +8029,84 @@ msgid "Remove from any searches for 1 week"
 msgstr "Remover de qualquer pesquisa por 1 semana"
 
 #: ../code/application/views/helpfile/pofields.php:776
-#, fuzzy, php-format
+#, php-format
 msgid "Standard Single Private Ensuite"
-msgstr "Padrão Solteiro Individual com Banheiro Compartilhado"
+msgstr "Quarto Padrão com Banheiro Privativo"
 
 #: ../code/application/views/helpfile/pofields.php:777
-#, fuzzy, php-format
+#, php-format
 msgid "Standard Twin Private Ensuite"
-msgstr "Padrão Solteiro Individual com Banheiro Compartilhado"
+msgstr "Quarto Padrão Duplo com Suíte"
 
 #: ../code/application/views/helpfile/pofields.php:778
 #, php-format
 msgid "Deluxe Double Bed Private Ensuite"
-msgstr ""
+msgstr "Quarto de Luxo com Cama de Casal e Suíte"
 
 #: ../code/application/views/helpfile/pofields.php:779
 #, php-format
 msgid "1 Bed Private Ensuite"
-msgstr ""
+msgstr "1 Cama com Suíte"
 
 #: ../code/application/views/helpfile/pofields.php:780
-#, fuzzy, php-format
+#, php-format
 msgid "%d Bed Private Ensuite"
-msgstr "%d Camas Individuais com Banheiro Compartilhado"
+msgstr "%d Camas com Suíte"
 
 #: ../code/application/views/helpfile/pofields.php:781
 #, php-format
 msgid "Deluxe 1 Bed Family Room Ensuite"
-msgstr ""
+msgstr "1 Cama de Luxo em Quarto Familiar com Suíte"
 
 #: ../code/application/views/helpfile/pofields.php:782
 #, php-format
 msgid "Deluxe %d Bed Family Room Ensuite"
-msgstr ""
+msgstr "%d Camas de Luxo em Quarto Familiar com Suíte"
 
 #: ../code/application/views/helpfile/pofields.php:783
-#, fuzzy, php-format
+#, php-format
 msgid "Filter by districts"
-msgstr "Filtrar por:"
+msgstr "Filtrer par quartiers"
 
 #: ../code/application/views/helpfile/pofields.php:784
 #, php-format
 msgid "Filter by landmarks (-2kms)"
-msgstr ""
+msgstr "Filtrer par attractions (-2kms)"
 
 #: ../code/application/views/helpfile/pofields.php:785
-#, fuzzy, php-format
+#, php-format
 msgid "Lowest price per night per person in a dorm"
-msgstr "Média por noite por pessoa"
+msgstr "Menor preço por noite por pessoa por quarto"
 
 #: ../code/application/views/helpfile/pofields.php:786
-#, fuzzy, php-format
+#, php-format
 msgid "Lowest price per night per person in a private room"
-msgstr ""
-"O preço mais baixo por pessoa por noite em um quarto individual nessa "
-"propriedade:"
+msgstr "Menor preço por noite por pessoa em um quarto individual"
 
 #: ../code/application/views/helpfile/pofields.php:787
 #, php-format
 msgid "Deposit:"
-msgstr ""
+msgstr "Depósito:"
 
 #: ../code/application/views/helpfile/pofields.php:788
 #, php-format
 msgid "Deposit to be paid now:"
-msgstr ""
+msgstr "Depósito a ser pago agora:"
 
 #: ../code/application/views/helpfile/pofields.php:789
-#, fuzzy, php-format
+#, php-format
 msgid "Deposit already paid:"
-msgstr "Pagamento já realizado"
+msgstr "Depósito já realizado:"
 
 #: ../code/application/views/helpfile/pofields.php:790
 #, php-format
 msgid "Amount already charged in %s:"
-msgstr ""
+msgstr "Valor já cobrado em %s:"
 
 #: ../code/application/views/helpfile/pofields.php:791
 #, php-format
 msgid "Currency for the deposit:"
-msgstr ""
+msgstr "Moedas para fazer o depósito:"
 
 #: ../code/application/views/helpfile/pofields.php:792
 #, php-format
@@ -8116,42 +8114,44 @@ msgid ""
 "You only pay the deposit to confirm and secure your reservation now. The "
 "remaining amount is payable upon arrival."
 msgstr ""
+"Você realiza o depósito para confirmar a assegurar a sua reserva. O valor "
+"que remanescente pode ser pago na sua chegada."
 
 #: ../code/application/views/helpfile/pofields.php:793
 #, php-format
 msgid "Amount to be paid on arrival:"
-msgstr ""
+msgstr "Valor a ser pago na chegada:"
 
 #: ../code/application/views/helpfile/pofields.php:794
 #, php-format
 msgid "Amount to be paid when you arrive at the property"
-msgstr ""
+msgstr "Valor a ser pago quando você chegar à propriedade"
 
 #: ../code/application/views/helpfile/pofields.php:796
-#, fuzzy, php-format
+#, php-format
 msgid "Membership card (not required):"
-msgstr "Cartão de membro requerido"
+msgstr "Cartão de associado (não é obrigatório):"
 
 #: ../code/application/views/helpfile/pofields.php:797
-#, fuzzy, php-format
+#, php-format
 msgid "Membership card:"
-msgstr "Cartão de membro requerido"
+msgstr "Cartão de associado:"
 
 #: ../code/application/views/helpfile/pofields.php:798
 #, php-format
 msgid "The deposit is non refundable and non transferable."
-msgstr ""
+msgstr "O depósito não é reembolsável e não é transferível."
 
 #: ../code/application/views/helpfile/pofields.php:799
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit to confirm and secure your reservation now. The "
 "remaining amount is payable upon arrival. You will find the property"
 msgstr ""
-" Agora você só paga um depósito (10%% do valor total) para confirmar e "
-"garantir sua reserva. O restante (90%%) será pago na chegada. Encontrará "
-"informações sobre o estabalecimento escolhido (endereço de email, número de "
-"telefone ...) no e-mail de confirmação depois de ter efetuado sua reserva."
+"Você realiza o depósito para confirmar a assegurar a sua reserva. O valor "
+"que remanescente pode ser pago na sua chegada. Você irá encontrar as "
+"informações de contato do proprietário (email, endereço, número de "
+"telefone…) no seu e-mail de confirmação após ter feito a reserva."
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
