--- a/languages/ci/locale/fi_FI/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/fi_FI/LC_MESSAGES/auberge_lang_ho.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-24 16:44+0300\n"
-"PO-Revision-Date: 2013-04-23 21:53+0200\n"
+"PO-Revision-Date: 2013-04-24 21:09+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -8394,7 +8393,7 @@ msgstr "Jäsenyys kortti( ei tarvitse):"
 #: ../code/application/views/helpfile/pofields.php:797
 #, php-format
 msgid "Membership card:"
-msgstr "Jsenyys kortti:"
+msgstr "Jäsenyys kortti:"
 
 #: ../code/application/views/helpfile/pofields.php:798
 #, php-format
