--- a/languages/ci/locale/de_DE/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/de_DE/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-24 16:44+0300\n"
-"PO-Revision-Date: 2013-04-22 21:55-0800\n"
-"Last-Translator: Mc web <info@mcwebmanagement.com>\n"
+"PO-Revision-Date: 2013-04-25 23:57+0200\n"
+"Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1217,7 +1216,7 @@ msgstr "Die Karten sind unerlässlich und sehr praktisch."
 #: ../code/application/views/helpfile/pofields.php:668
 #, php-format
 msgid "Your message has been sent to %s"
-msgstr "Ihre Nachricht wurde gesendet %s"
+msgstr "Ihre Nachricht wurde an %s gesendet"
 
 #: ../code/application/views/includes/template-share-email-popup.php:17
 #: ../code/application/views/helpfile/pofields.php:669
@@ -3253,14 +3252,14 @@ msgid "1 guest in 1 Bedroom."
 msgstr "1 Gast in 1 Schlafzimmer."
 
 #: ../code/application/views/property_rooms_avail.php:413
-#, fuzzy, php-format
+#, php-format
 msgid "1 guest in %d Bedrooms (%d guests in each room)."
-msgstr "%d Gäste in %d Schlafzimmer (%d Gäste in jedem Zimmer)."
+msgstr "1 Gäste in %d Schlafzimmer (%d Gäste in jedem Zimmer)."
 
 #: ../code/application/views/property_rooms_avail.php:413
-#, fuzzy, php-format
+#, php-format
 msgid "1 guest in %d Bedrooms (%d guest in each room)."
-msgstr "%d Gäste in %d Schlafzimmer (%d Gäste in jedem Zimmer)."
+msgstr "1 Gäste in %d Schlafzimmer (%d Gäste in jedem Zimmer)."
 
 #: ../code/application/views/property_rooms_avail.php:415
 #: ../code/application/views/hw/booking_avail_view.php:526
@@ -3286,7 +3285,7 @@ msgstr "%d Gäste in %d Schlafzimmer (%d Gäste in jedem Zimmer)."
 #: ../code/application/views/property_rooms_avail.php:417
 #: ../code/application/views/hw/booking_avail_view.php:528
 #: ../code/application/views/hb/booking_avail_view.php:571
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedrooms (%d guest in each room)."
 msgstr "%d Gäste in %d Schlafzimmer (%d Gäste in jedem Zimmer)."
 
@@ -4185,7 +4184,7 @@ msgstr "Unterkunftsart"
 #: ../code/application/views/city_view.php:105
 #: ../code/application/views/city_view.php:130
 msgid "Most Popular"
-msgstr ""
+msgstr "Die Beliebtesten"
 
 #: ../code/application/views/city_view.php:106
 #: ../code/application/views/city_ajax_view.php:226
@@ -4622,7 +4621,7 @@ msgid "Bedrooms you will occupy:"
 msgstr "Zimmeranzahl, die Sie belegen:"
 
 #: ../code/application/views/hw/booking_avail_view.php:526
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedroom (1 guest in each room)."
 msgstr "%d Gäste in %d Schlafzimmer (1 Gast in jedem Zimmer)."
 
@@ -4638,7 +4637,7 @@ msgstr ""
 
 #: ../code/application/views/hw/booking_avail_view.php:591
 #: ../code/application/views/hb/booking_avail_view.php:518
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedrooms (1 guest in each room)."
 msgstr "%d Gäste in %d Schlafzimmer (1 Gast in jedem Zimmer)."
 
@@ -8569,18 +8568,17 @@ msgid "The deposit is non refundable and non transferable."
 msgstr "Die Kaution ist nicht rückerstattbar und nicht übertragbar."
 
 #: ../code/application/views/helpfile/pofields.php:799
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit to confirm and secure your reservation now. The "
 "remaining amount is payable upon arrival. You will find the property'\\s "
 "contact information (email, address, telephone number…) in your confirmation "
 "email after you have made your reservation."
 msgstr ""
-"Nur 10%% des Gesamtbetrags müssen jetzt als Anzahlung gezahlt werden, um "
-"Ihre Reservierung zu bestätigen und zu sichern. Der Restbetrag (90%%) ist "
-"bei Ihrer Anreise fällig. Die Kontaktinformationen Ihrer Unterkunft (E-Mail, "
-"Adresse, Telefonnummer,...) finden Sie in Ihrer Bestätigungs-E-Mail, nachdem "
-"Sie eine Reservierung durchgeführt haben. "
+"Sie bezahlen jetzt nur die Kaution zur Bestätigung und zur Sicherung ihrer "
+"Buchung. Der restliche Betrag ist fällig bei Ankunft. Sie können die "
+"Kontaktangaben der Liegenschaft (Email, Adresse, Telefonnummer usw.) in "
+"ihrer Bestätigungs-Email finden, nachdem Sie die Buchung vollzogen haben."
 
 #: ../code/application/views/helpfile/pofields.php:800
 #, php-format
@@ -8588,82 +8586,86 @@ msgid ""
 "By clicking \"Create Account\" you confirm that you accept the Terms of "
 "Service and Privacy Policy."
 msgstr ""
+"Durch Klicken auf \"Konto eröffnen\", akzeptieren Sie die Handelsbedingungen "
+"und Datenschutzrichtlinien."
 
 #: ../code/application/views/helpfile/pofields.php:801
-#, fuzzy, php-format
+#, php-format
 msgid "Create account"
-msgstr "Spät-Check-Out"
+msgstr "Konto eröffnen"
 
 #: ../code/application/views/helpfile/pofields.php:802
 #, php-format
 msgid "Tell me about great deals and exclusive discounts!"
-msgstr ""
+msgstr "Erzähl mehr über die tollen Deals und die exklusiven Rabatte!"
 
 #: ../code/application/views/helpfile/pofields.php:803
-#, fuzzy, php-format
+#, php-format
 msgid "Save this property as a favorite"
-msgstr "Bewerten Sie diese Einrichtung"
+msgstr "Diese Immobilie als Favorit speichern"
 
 #: ../code/application/views/helpfile/pofields.php:804
 #, php-format
 msgid ""
 "We will never sell your personal information - You can unsubscribe anytime."
 msgstr ""
+"Wir werden ihre persönlichen Informationen nicht weitergeben - Sie können "
+"jederzeit ihr Abonnement stornieren."
 
 #: ../code/application/views/helpfile/pofields.php:805
 #, php-format
 msgid "Your private notes (optional)"
-msgstr ""
+msgstr "Ihre privaten Notizen (optional)"
 
 #: ../code/application/views/helpfile/pofields.php:806
 #, php-format
 msgid "Characters left:"
-msgstr ""
+msgstr "Buchstaben übrig:"
 
 #: ../code/application/views/helpfile/pofields.php:807
-#, fuzzy, php-format
+#, php-format
 msgid "Update Notes"
-msgstr "Wichtige Hinweise"
+msgstr "Notizen updaten"
 
 #: ../code/application/views/helpfile/pofields.php:808
-#, fuzzy, php-format
+#, php-format
 msgid "Remove from my favorites"
-msgstr "Von dieser Suche löschen"
+msgstr "Meine Favoriten löschen"
 
 #: ../code/application/views/helpfile/pofields.php:809
 #, php-format
 msgid "Cancel"
-msgstr ""
+msgstr "Stornieren"
 
 #: ../code/application/views/helpfile/pofields.php:810
 #, php-format
 msgid "My favorite properties"
-msgstr ""
+msgstr "Meine Favoriten-Immobilien"
 
 #: ../code/application/views/helpfile/pofields.php:811
 #, php-format
 msgid "List of favorite properties"
-msgstr ""
+msgstr "Liste der Favoriten-Immobilien"
 
 #: ../code/application/views/helpfile/pofields.php:812
 #, php-format
 msgid "My short notes about the property"
-msgstr ""
+msgstr "Meine kurzen Notizen der Immobilie"
 
 #: ../code/application/views/helpfile/pofields.php:813
-#, fuzzy, php-format
+#, php-format
 msgid "Edit or remove"
-msgstr "Entfernen"
+msgstr "Bearbeiten oder löschen"
 
 #: ../code/application/views/helpfile/pofields.php:814
-#, fuzzy, php-format
+#, php-format
 msgid "Saved to my favorites"
-msgstr "Favoriten ansehen"
+msgstr "Zu meinen Favoriten gespeichert"
 
 #: ../code/application/views/helpfile/pofields.php:815
-#, fuzzy, php-format
+#, php-format
 msgid "Add to my favorites"
-msgstr "Favorit hinzufügen"
+msgstr "Zu meinen Favoriten hinzufügen"
 
 #: ../code/application/views/helpfile/pofields.php:816
 #, php-format
@@ -8672,11 +8674,16 @@ msgid ""
 "book it at a later date if you wish.\r\n"
 "Account created"
 msgstr ""
+"Sie können diese Immobilie als ein Favorit in ihrem Konto speichern, damit "
+"Sie sie leicht zu einem späteren Zeitpunkt buchen können sofern Sie dies "
+"wünschen."
 
 #: ../code/application/views/helpfile/pofields.php:818
 #, php-format
 msgid "To save a property as a favorite, you must be login to your account."
 msgstr ""
+"Um eine Immobilie als Favorit zu speichern, loggen Sie sich bitte in ihr "
+"Konto ein."
 
 #: ../code/application/views/helpfile/pofields.php:819
 #, php-format
@@ -8684,21 +8691,26 @@ msgid ""
 "By creating an account you will be able to save properties as favorites, get "
 "access to your bookings and ratings, and many more benefits."
 msgstr ""
+"Indem Sie ein Konto eröffnen sind Sie in der Lage Immobilien als Favoriten "
+"zu speichern, Zugang zu Buchungen und Bewertungen zu erhalten, und viele "
+"weitere Vorteile."
 
 #: ../code/application/views/helpfile/pofields.php:820
 #, php-format
 msgid "Please enter your email address and we will send you a password."
 msgstr ""
+"Bitte geben Sie ihre Email-Adresse ein und wir werden Ihnen ein Passwort "
+"zusenden."
 
 #: ../code/application/views/helpfile/pofields.php:821
-#, fuzzy, php-format
+#, php-format
 msgid "Saved favorite properties"
-msgstr "Suche nach mehr Hostels und Jugendherbergen in %s"
+msgstr "Gespeicherte Favoriten-Immobilien"
 
 #: ../code/application/views/helpfile/pofields.php:822
 #, fuzzy
 msgid "Deposit to be paid now (15%)"
-msgstr "Kaution jetzt fällig:"
+msgstr "Kaution, die jetzt fällig ist (%d)"
 
 #: ../code/application/views/helpfile/pofields.php:823
 #, fuzzy
@@ -8708,31 +8720,31 @@ msgid ""
 "will find the property'\\s contact information (email, address, telephone "
 "number…) in your confirmation email after you have made your reservation."
 msgstr ""
-"Nur 10%% des Gesamtbetrags müssen jetzt als Anzahlung gezahlt werden, um "
-"Ihre Reservierung zu bestätigen und zu sichern. Der Restbetrag (90%%) ist "
-"bei Ihrer Anreise fällig. Die Kontaktinformationen Ihrer Unterkunft (E-Mail, "
-"Adresse, Telefonnummer,...) finden Sie in Ihrer Bestätigungs-E-Mail, nachdem "
-"Sie eine Reservierung durchgeführt haben. "
+"Sie bezahlen nur die Kaution (%d des Gesamtbetrages) und sichern so ihre "
+"Reservierung. Der Restbetrag (%d) ist bezahlbar bei Anreise. Sie finden die "
+"Kontaktinformationen der Immobilie (Email-Adresse, Anschrift, Telefonnummer "
+"usw.) in ihrer Bestätigungs-Email, nachdem Sie die Reservierung getätigt "
+"haben."
 
 #: ../code/application/views/helpfile/pofields.php:824
 #, fuzzy
 msgid "Deposit (15%)"
-msgstr "Kaution:"
+msgstr "Kaution (%d)"
 
 #: ../code/application/views/helpfile/pofields.php:825
-#, fuzzy, php-format
+#, php-format
 msgid "Amount already paid:"
-msgstr "Kaution bereitz bezahlt:"
+msgstr "Betrag bereits bezahlt:"
 
 #: ../code/application/views/helpfile/pofields.php:826
 #, php-format
 msgid "The most popular"
-msgstr ""
+msgstr "Das Beliebteste"
 
 #: ../code/application/views/helpfile/pofields.php:827
-#, fuzzy, php-format
+#, php-format
 msgid "Most popular"
-msgstr "Wichtige Hinweise"
+msgstr "Die Beliebtesten"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
