--- a/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang_if.po
+++ b/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang_if.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-24 16:44+0300\n"
-"PO-Revision-Date: 2013-04-21 20:52+0200\n"
+"PO-Revision-Date: 2013-04-25 23:47+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -3216,14 +3215,14 @@ msgid "1 guest in 1 Bedroom."
 msgstr "1 fő / 1 hálószoba."
 
 #: ../code/application/views/property_rooms_avail.php:413
-#, fuzzy, php-format
+#, php-format
 msgid "1 guest in %d Bedrooms (%d guests in each room)."
-msgstr "%d fő / %d hálószoba (%d vendég szobánként)"
+msgstr "1 fő / %d hálószoba (%d vendég szobánként)"
 
 #: ../code/application/views/property_rooms_avail.php:413
-#, fuzzy, php-format
+#, php-format
 msgid "1 guest in %d Bedrooms (%d guest in each room)."
-msgstr "%d fő / %d hálószoba (%d vendég szobánként)"
+msgstr "1 fő / %d hálószoba (%d vendég szobánként)"
 
 #: ../code/application/views/property_rooms_avail.php:415
 #: ../code/application/views/hw/booking_avail_view.php:526
@@ -3249,7 +3248,7 @@ msgstr "%d fő / %d hálószoba (%d vendég szobánként)"
 #: ../code/application/views/property_rooms_avail.php:417
 #: ../code/application/views/hw/booking_avail_view.php:528
 #: ../code/application/views/hb/booking_avail_view.php:571
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedrooms (%d guest in each room)."
 msgstr "%d fő / %d hálószoba (%d vendég szobánként)"
 
@@ -4084,7 +4083,6 @@ msgstr "Foglalási lehetőség az összes országban "
 
 #: ../code/application/views/city_view.php:12
 #: ../code/application/views/city_view.php:251
-#, fuzzy
 msgid "Filter by Districts"
 msgstr "Szűrés körzetek szerint"
 
@@ -4135,7 +4133,7 @@ msgstr "Szállás típus"
 #: ../code/application/views/city_view.php:105
 #: ../code/application/views/city_view.php:130
 msgid "Most Popular"
-msgstr ""
+msgstr "Legkedveltebbek"
 
 #: ../code/application/views/city_view.php:106
 #: ../code/application/views/city_ajax_view.php:226
@@ -4568,7 +4566,7 @@ msgid "Bedrooms you will occupy:"
 msgstr "Az Ön által lefoglalt hálószobák száma:"
 
 #: ../code/application/views/hw/booking_avail_view.php:526
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedroom (1 guest in each room)."
 msgstr "%d fő / %d hálószoba (1 vendég szobánként)"
 
@@ -4582,7 +4580,7 @@ msgstr "Különálló szobában a legalacsonyabb ár fő / éjre vonatkozóan: %
 
 #: ../code/application/views/hw/booking_avail_view.php:591
 #: ../code/application/views/hb/booking_avail_view.php:518
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedrooms (1 guest in each room)."
 msgstr "%d fő / %d hálószoba (1 vendég szobánként)"
 
@@ -8462,18 +8460,17 @@ msgstr ""
 "Az előleg nem kerül visszafizetésre és más foglalásnál nem használható fel."
 
 #: ../code/application/views/helpfile/pofields.php:799
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You only pay the deposit to confirm and secure your reservation now. The "
 "remaining amount is payable upon arrival. You will find the property'\\s "
 "contact information (email, address, telephone number…) in your confirmation "
 "email after you have made your reservation."
 msgstr ""
-" Önnek most csak a letétet kell befizetnie (a teljes összeg10%%-át), hogy "
-"megerősítse és biztosítsa a foglalást. A fennmaradó összeg (a maradék 90%%) "
-"érkezéskor fizetendő. Az ingatlan elérhetőségeit  (e-mail, cím, "
-"telefonszám ...) a visszaigazoló e-mailben találja meg, amit a foglalás után "
-"kapott."
+"Az előleget a szobafoglalás visszaigazolása és biztosítása érdekében kell "
+"befizetnie.  A fennmaradó összeget érkezéskor kell fizetni.  Az ingatlan "
+"elérhetőségeit (email, cím, telefonszám…) a foglalást követően emailben "
+"fogja megkapni."
 
 #: ../code/application/views/helpfile/pofields.php:800
 #, php-format
@@ -8481,82 +8478,86 @@ msgid ""
 "By clicking \"Create Account\" you confirm that you accept the Terms of "
 "Service and Privacy Policy."
 msgstr ""
+"A \"Fiók létrehozása\" gombra kattintva a Szerződési Feltételek és az "
+"Adatvédelmi Szabályzat is elfogadásra kerülnek."
 
 #: ../code/application/views/helpfile/pofields.php:801
-#, fuzzy, php-format
+#, php-format
 msgid "Create account"
-msgstr "Kásői kijelentkezés"
+msgstr "Fiók létrehozása"
 
 #: ../code/application/views/helpfile/pofields.php:802
 #, php-format
 msgid "Tell me about great deals and exclusive discounts!"
-msgstr ""
+msgstr "Tájékoztasson a nagyszerű ajánlatokról és a exkluzív árengedményekről!"
 
 #: ../code/application/views/helpfile/pofields.php:803
-#, fuzzy, php-format
+#, php-format
 msgid "Save this property as a favorite"
-msgstr "Értékeld ezt az ingatlant"
+msgstr "Ingatlan mentése a kedvencek közé."
 
 #: ../code/application/views/helpfile/pofields.php:804
 #, php-format
 msgid ""
 "We will never sell your personal information - You can unsubscribe anytime."
 msgstr ""
+"Személyes információit nem adjuk ki - Bármikor leiratkozhat "
+"szolgáltatásunkról."
 
 #: ../code/application/views/helpfile/pofields.php:805
 #, php-format
 msgid "Your private notes (optional)"
-msgstr ""
+msgstr "Személyes jegyzetek (választható)"
 
 #: ../code/application/views/helpfile/pofields.php:806
 #, php-format
 msgid "Characters left:"
-msgstr ""
+msgstr "Felhasználható karakterek:"
 
 #: ../code/application/views/helpfile/pofields.php:807
-#, fuzzy, php-format
+#, php-format
 msgid "Update Notes"
-msgstr "Fontos tudnivalók"
+msgstr "Jegyzetek Frissítése"
 
 #: ../code/application/views/helpfile/pofields.php:808
-#, fuzzy, php-format
+#, php-format
 msgid "Remove from my favorites"
-msgstr "Keresési eredmény eltávolítása"
+msgstr "Eltávolítás a kedvencek közül"
 
 #: ../code/application/views/helpfile/pofields.php:809
 #, php-format
 msgid "Cancel"
-msgstr ""
+msgstr "Törlés"
 
 #: ../code/application/views/helpfile/pofields.php:810
 #, php-format
 msgid "My favorite properties"
-msgstr ""
+msgstr "Kedvenc ingatlanjaim"
 
 #: ../code/application/views/helpfile/pofields.php:811
 #, php-format
 msgid "List of favorite properties"
-msgstr ""
+msgstr "Kedvenc ingatlanok listája"
 
 #: ../code/application/views/helpfile/pofields.php:812
 #, php-format
 msgid "My short notes about the property"
-msgstr ""
+msgstr "Rövid megjegyzéseim az ingatlanról"
 
 #: ../code/application/views/helpfile/pofields.php:813
-#, fuzzy, php-format
+#, php-format
 msgid "Edit or remove"
-msgstr "Eltávolitás"
+msgstr "Szerkesztés vagy eltávolítás"
 
 #: ../code/application/views/helpfile/pofields.php:814
-#, fuzzy, php-format
+#, php-format
 msgid "Saved to my favorites"
-msgstr "Mutasd a kedvenceket "
+msgstr "Mentés a kedvencek közé"
 
 #: ../code/application/views/helpfile/pofields.php:815
-#, fuzzy, php-format
+#, php-format
 msgid "Add to my favorites"
-msgstr "Kedvenc hozzáadása"
+msgstr "Hozzáadás a kedvencekhez"
 
 #: ../code/application/views/helpfile/pofields.php:816
 #, php-format
@@ -8565,11 +8566,15 @@ msgid ""
 "book it at a later date if you wish.\r\n"
 "Account created"
 msgstr ""
+"A fiókjában az ingatlant elmentheti a kedvencei közé, így, ha szeretné, egy "
+"későbbi időpontban könnyen lefoglahatja."
 
 #: ../code/application/views/helpfile/pofields.php:818
 #, php-format
 msgid "To save a property as a favorite, you must be login to your account."
 msgstr ""
+"Ahhoz, hogy az ingatlant el tudja menteni a kedvencek közé, be kell "
+"jelentkeznie."
 
 #: ../code/application/views/helpfile/pofields.php:819
 #, php-format
@@ -8577,21 +8582,24 @@ msgid ""
 "By creating an account you will be able to save properties as favorites, get "
 "access to your bookings and ratings, and many more benefits."
 msgstr ""
+"Fiókja létrehozásával az ingatlanokat el tudja menteni kedvencként, "
+"hozzáférést kap foglalásaihoz és értékeléseihez és még számos egyéb előnyt "
+"élvezhet."
 
 #: ../code/application/views/helpfile/pofields.php:820
 #, php-format
 msgid "Please enter your email address and we will send you a password."
-msgstr ""
+msgstr "Kérem, adja meg email címét és elküdjük a jelszót."
 
 #: ../code/application/views/helpfile/pofields.php:821
-#, fuzzy, php-format
+#, php-format
 msgid "Saved favorite properties"
-msgstr "Keress még több szállást a következő városban: %s"
+msgstr "Elmentett kedvenc ingatlanok"
 
 #: ../code/application/views/helpfile/pofields.php:822
 #, fuzzy
 msgid "Deposit to be paid now (15%)"
-msgstr "Ma napig befizetendő előleg:"
+msgstr "Most fizetendő előleg (%d)"
 
 #: ../code/application/views/helpfile/pofields.php:823
 #, fuzzy
@@ -8601,31 +8609,30 @@ msgid ""
 "will find the property'\\s contact information (email, address, telephone "
 "number…) in your confirmation email after you have made your reservation."
 msgstr ""
-" Önnek most csak a letétet kell befizetnie (a teljes összeg10%%-át), hogy "
-"megerősítse és biztosítsa a foglalást. A fennmaradó összeg (a maradék 90%%) "
-"érkezéskor fizetendő. Az ingatlan elérhetőségeit  (e-mail, cím, "
-"telefonszám ...) a visszaigazoló e-mailben találja meg, amit a foglalás után "
-"kapott."
+"Az előleget (%d) a szobafoglalás visszaigazolása és biztosítása érdekében "
+"kell befizetnie.  A fennmaradó összeget (%d) érkezéskor kell fizetni.  Az "
+"ingatlan elérhetőségeit (email, cím, telefonszám…) a foglalást követően "
+"emailben fogja megkapni."
 
 #: ../code/application/views/helpfile/pofields.php:824
 #, fuzzy
 msgid "Deposit (15%)"
-msgstr "Előleg:"
+msgstr "Előleg (%d)"
 
 #: ../code/application/views/helpfile/pofields.php:825
-#, fuzzy, php-format
+#, php-format
 msgid "Amount already paid:"
-msgstr "Már befizetett előleg:"
+msgstr "Már befizetett összeg:"
 
 #: ../code/application/views/helpfile/pofields.php:826
 #, php-format
 msgid "The most popular"
-msgstr ""
+msgstr "Legkedveltebb"
 
 #: ../code/application/views/helpfile/pofields.php:827
-#, fuzzy, php-format
+#, php-format
 msgid "Most popular"
-msgstr "Fontos tudnivalók "
+msgstr "Legkedveltebbek"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
